changed the icon

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwZZdSNb6U6j8OJ3UxzRZulqhVpIqNgeDogGmOc73bQTCpLHV2c919fh4E5PVpuTNN6h8&usqp=CAU" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<title>Reactfolio</title>
